manifests/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: wordpress
  name: wordpress
spec:
  ports:
    - name: '80'
      port: 80
      targetPort: 80
  selector:
    service: wordpress
