manifests/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-issuer'
spec:
  ingressClassName: 'nginx'
  tls:
    - hosts:
        - api.blog.brycemclachlan.me
      secretName: wordpress-tls
  rules:
    - host: api.blog.brycemclachlan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
